--- a/restaurant/templates/about.html
+++ b/restaurant/templates/about.html
@@ -43,7 +43,10 @@
       <!--Begin col-->
       <div class="column">
         <figure class="figure">
-          <img src="{% static 'img/mario-and-adrian.jpg' %}" alt="Mario and Adrian" />
+          <img
+            src="{% static 'img/mario-and-adrian.jpg' %}"
+            alt="Mario and Adrian"
+          />
           <figcaption class="figure-caption">
             Little Lemon owners Mario and Adrian.
           </figcaption>
