--- a/restaurant/templates/menu.html
+++ b/restaurant/templates/menu.html
@@ -4,23 +4,16 @@
 <h1>Menu</h1>
 <!--Begin col-->
 <div class="column">
-  <!-- Step 14: Create for loop -->
-  {% if menu %}
-  {% for item in menu %}
-  <p>
-    <!-- Step 14: Add DTL variable for name -->
-    <a href="{% url 'menu_item' pk=item.pk %}">
-      {{item.name}}
-      <!-- {{item.menu_item_name}} -->
-    </a>
-    <span class="menu-price">
-      <!-- Step 14: Add DTL variable for price -->
-      ${{item.price}}.00
-    </span>
-  </p>
-  <!-- Step 14: End or loop -->
-  {% endfor %}
-  {% endif %}
+    {% for item in menu.menu %}
+    <p>
+        <a href="{% url 'menu_item' pk=item.pk %}">
+            {{ item.name }}
+            </a>
+        <span class="menu-price">
+            ${{ item.price }}.00
+        </span>
+    </p>
+    {% endfor %}
 </div>
 <!--End col-->
 {% endblock %}
